--- a/index.html
+++ b/index.html
@@ -1,146 +1,18 @@
 <!DOCTYPE html>
-<html lang="en"> 
-<head> 
-  
-  <meta charset="UTF-8" /> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-  <title>Smoothie Recipes Hub</title> 
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Test Smoothie Site</title>
   <style>
-      body {
-          font-family: "Times New Roman", Times, serif;
-          line-height: 1.6;
-          margin: 0;
-          padding: 0;
-          background-color: #ffe6f0; /* light pink */
-          color: #333;
-      }
-
-      header {
-          background: #d63384; /* darker pink for contrast */
-          color: #fff;
-          padding: 1rem 0;
-          text-align: center;
-      }
-
-      header h1 {
-          margin: 0;
-          font-size: 2rem;
-      }
-
-      header p {
-          margin: 0;
-          font-size: 1.2rem;
-      }
-
-      main {
-          max-width: 900px;
-          margin: 2rem auto;
-          padding: 1rem;
-          background: #fff0f5; /* soft pink box */
-          border-radius: 8px;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      section {
-          margin-bottom: 2rem;
-      }
-
-      h2 {
-          border-bottom: 2px solid #d63384;
-          padding-bottom: 0.5rem;
-          margin-bottom: 1rem;
-          font-size: 1.5rem;
-      }
-
-      ul {
-          list-style: none;
-          padding: 0;
-      }
-
-      ul li {
-          margin: 0.5rem 0;
-      }
-
-      .recipe-card {
-          border: 1px solid #ddd;
-          border-radius: 6px;
-          padding: 1rem;
-          margin-bottom: 1rem;
-          background-color: #fffafa; /* very light pink */
-      }
-
-      .recipe-card h3 {
-          margin-top: 0;
-      }
-
-      form {
-          display: flex;
-          flex-direction: column;
-      }
-
-      form input, form textarea, form button {
-          margin-bottom: 1rem;
-          padding: 0.5rem;
-          font-size: 1rem;
-          font-family: "Times New Roman", Times, serif;
-      }
-
-      form button {
-          background: #d63384;
-          color: #fff;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
-      }
-
-      form button:hover {
-          background: #a61c6b;
-      }
+    body {
+      font-family: "Times New Roman", Times, serif;
+      background-color: #ffe6f0;
+    }
   </style>
-</head> 
+</head>
 <body>
-  <header>
-    <h1>🍓 Smoothie Recipes Hub</h1>
-    <p>Share, discover, and blend your way to delicious smoothies!</p>
-  </header>
-
-  <main>
-    <!-- Featured Recipes -->
-    <section>
-      <h2>Featured Recipes</h2>
-      <div class="recipe-card">
-        <h3>Tropical Mango Smoothie</h3>
-        <p><strong>Ingredients:</strong> Mango, Pineapple, Banana, Coconut Milk</p>
-        <p><strong>Instructions:</strong> Blend all ingredients until smooth. Serve chilled.</p>
-      </div>
-
-      <div class="recipe-card">
-        <h3>Berry Blast Smoothie</h3>
-        <p><strong>Ingredients:</strong> Strawberries, Blueberries, Raspberries, Greek Yogurt, Honey</p>
-        <p><strong>Instructions:</strong> Add everything to a blender and enjoy!</p>
-      </div>
-    </section>
-
-    <!-- Recent Recipes -->
-    <section>
-      <h2>Recent Posts</h2>
-      <ul>
-        <li>🍌 Peanut Butter Banana Smoothie</li>
-        <li>🥬 Green Detox Smoothie</li>
-        <li>🍫 Chocolate Almond Smoothie</li>
-      </ul>
-    </section>
-
-    <!-- Submit New Recipe -->
-    <section>
-      <h2>Submit Your Recipe</h2>
-      <form>
-        <input type="text" placeholder="Recipe Title" required />
-        <textarea placeholder="Ingredients (comma separated)" rows="3" required></textarea>
-        <textarea placeholder="Instructions" rows="4" required></textarea>
-        <button type="submit">Post Recipe</button>
-      </form>
-    </section>
-  </main>
+  <h1>🍓 Smoothie Recipes Hub</h1>
+  <p>If you see this on a light pink background with Times New Roman text, it works!</p>
 </body>
 </html>
