--- a/index.html
+++ b/index.html
@@ -3,16 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test Smoothie Site</title>
+  <title>Smoothie Recipes Hub</title>
   <style>
     body {
       font-family: "Times New Roman", Times, serif;
-      background-color: #ffe6f0;
+      background-color: #ffe6f0; /* light pink */
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      color: #333;
+    }
+
+    header {
+      padding: 2rem 1rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin: 0;
+      letter-spacing: 2px;
+      color: #a61c6b; /* darker pink for contrast */
+    }
+
+    p {
+      font-size: 1.2rem;
+      color: #555;
+      margin-top: 0.5rem;
+    }
+
+    main {
+      max-width: 700px;
+      margin: 2rem auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      text-align: left;
     }
   </style>
 </head>
 <body>
-  <h1>🍓 Smoothie Recipes Hub</h1>
-  <p>If you see this on a light pink background with Times New Roman text, it works!</p>
+  <header>
+    <h1>Smoothie Recipes Hub</h1>
+    <p>Share, discover, and enjoy delicious smoothie blends!</p>
+  </header>
+
+  <main>
+    <h2>Example Recipe</h2>
+    <p><strong>Berry Blast:</strong> Strawberries, blueberries, yogurt, honey. Blend until smooth.</p>
+  </main>
 </body>
 </html>
