--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <header>
-    <img src="bratz.png" alt="Bratz picture">
+    <img src="download.jpeg" alt="Bratz picture">
     <h1>Fav Smoothie Recipes</h1>
   </header>
 
